// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/timestamp.proto";

import "google/protobuf/wrappers.proto";

option go_package = "github.com/auroraride/adapter/defs/xcdef/proto/entpb";

message Battery {
  int64 id = 1;

  string sn = 2;

  google.protobuf.UInt32Value soft_version = 3;

  google.protobuf.UInt32Value hard_version = 4;

  google.protobuf.UInt32Value soft_4g_version = 5;

  google.protobuf.UInt32Value hard_4g_version = 6;

  google.protobuf.UInt64Value sn_4g = 7;

  google.protobuf.StringValue iccid = 8;

  google.protobuf.UInt32Value soc = 9;

  repeated Heartbeat heartbeats = 10;

  repeated Reign reigns = 11;

  repeated Fault fault_log = 12;
}

message Fault {
  int64 id = 1;

  string sn = 2;

  int64 battery_id = 3;

  int64 fault = 4;

  google.protobuf.Timestamp begin_at = 5;

  google.protobuf.Timestamp end_at = 6;

  Battery battery = 7;
}

message Heartbeat {
  int64 id = 1;

  string sn = 2;

  int64 battery_id = 3;

  google.protobuf.Timestamp created_at = 4;

  double voltage = 5;

  double current = 6;

  uint32 soc = 7;

  uint32 soh = 8;

  bool in_cabinet = 9;

  double capacity = 10;

  uint32 mon_max_voltage = 11;

  uint32 mon_max_voltage_pos = 12;

  uint32 mon_min_voltage = 13;

  uint32 mon_min_voltage_pos = 14;

  uint32 max_temp = 15;

  uint32 min_temp = 16;

  bytes faults = 17;

  bytes mos_status = 18;

  bytes mon_voltage = 19;

  bytes temp = 20;

  uint32 mos_temp = 21;

  uint32 env_temp = 22;

  bytes geom = 23;

  uint32 gps = 24;

  uint32 strength = 25;

  uint32 cycles = 26;

  uint32 charging_time = 27;

  uint32 dis_charging_time = 28;

  uint32 using_time = 29;

  uint32 total_charging_time = 30;

  uint32 total_dis_charging_time = 31;

  uint32 total_using_time = 32;

  Battery battery = 33;
}

message Reign {
  int64 id = 1;

  int64 action = 2;

  string sn = 3;

  int64 battery_id = 4;

  google.protobuf.Timestamp created_at = 5;

  string serial = 6;

  int64 ordinal = 7;

  google.protobuf.StringValue cabinet_name = 8;

  google.protobuf.StringValue remark = 9;

  bytes geom = 10;

  Battery battery = 11;
}
